# c-compiler

./: CMakeLists.txt  README.md  cc.cpp
code_gen/: CodeGen.cpp  CodeGen.h
optimization/: Optimize.h  OptimizeArithmeticExpr.cpp
parser/: c.l  c.y
syntax_tree/: ASTNodes.cpp  ASTNodes.h  SymbolDataBase.h
tests/: Makefile  arithmetic.c  complex_arithmetic.c  factorial.c  hello_world.c  pascal_triangle.c  print_sum.c  run_tests.sh  special_sum.c  tests.txt
utils/: CommonTypes.cpp  CommonTypes.h  non_terminal_types.h
